# obsidian-tools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  add_dataview_limits.py  dedup.py  pyproject.toml
obsidian-tools/: add_dataview_limits.py  common.py  dedup.py  unclobber_yaml_frontmatter.py
obsidian_tools/: add_dataview_limits.py  common.py  dedup.py  logging_utils.py  strip_frontmatter.py  unclobber_yaml_frontmatter.py
tests/: test_add_dataview_limits.py  test_dedup.py  test_strip_frontmatter.py
