[project]
name = "obsidian-tools"
version = "0.1.0"
description = "Scripts to help maintain my Obsidian 2nd brain."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.14",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.7",
    "pre-commit>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
