[project]
name = "obsidian-tools"
version = "0.1.0"
description = "Scripts to help maintain my Obsidian 2nd brain."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.21.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "ruamel-yaml>=0.18.14",
    "typer>=0.16.0",
]

[tool.setuptools]
packages = ["obsidian_tools"]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ty>=0.0.1a15",
    "ruff>=0.3.7",
    "pre-commit>=3.7.0",
]
